--- a/1.DynamoCraft.API/.env
+++ b/1.DynamoCraft.API/.env
@@ -1,5 +1,6 @@
-DbName = DynamoCraftDb
-DbUser = AdminDC
-DbPassword = DynamoCraft # Temporaire !!!
-TokenSecret = ...
-TokenLife = ...
+DBNAME = DynamoCraftDb
+DBUSER = AdminDC
+DBPASSWORD = DynamoCraft # Temporaire !!!
+PORT = 3306
+TOKENSECRET = ...
+TOKENLIFE = ...
