--- a/1.DynamoCraft.API/package.json
+++ b/1.DynamoCraft.API/package.json
@@ -2,7 +2,7 @@
   "name": "1.dynamocraft.api",
   "version": "1.0.0",
   "description": "API DynamoCraft",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "api test"
   },
