Corrections : - ajout des relations lor de l'application de la migrations - ajout d'un ordre de création de table pour la migration - correction des seed

--- a/1.DynamoCraft.API/config/config.json
+++ b/1.DynamoCraft.API/config/config.json
@@ -5,7 +5,8 @@
     "database": "DynamoCraftDb",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "port":3306
+    "timezone": "+02:00",
+    "port":3308
   },
   "test": {
     "username": "AdminDC",
@@ -13,7 +14,8 @@
     "database": "DynamoCraftDb",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "port":3306
+    "timezone": "+02:00",
+    "port":3308
   },
   "production": {
     "username": "AdminDC",
@@ -21,6 +23,7 @@
     "database": "DynamoCraftDb",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "port":3306
+    "timezone": "+02:00",
+    "port":3308
   }
 }
