- ajout de la route register avec pa prise en charge image - ajout des tableName dans les modèles pour pallier a la création par defaults

--- a/1.DynamoCraft.API/package.json
+++ b/1.DynamoCraft.API/package.json
@@ -4,6 +4,7 @@
   "description": "API DynamoCraft",
   "main": "app.js",
   "scripts": {
+    "reset-db": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
     "test": "api test"
   },
   "author": "",
