Commit 20 Nouveauté(s) : * ajout d'un composant pour réaliser les tests api * ajout de l'environement pour urlApi * mise en place d'un service générique parent : - gestion des erreurs - crud  + getAll générique * mise en place du service catégorie : - getAllCategorie 🆗 - getCategorieById 🆗 - postCategorie 🆗 - updateCategorie 🆗
Amélioration(s) :
- refactorisation des fichiers angular pour une meilleure cohésion
- améliorations du responsive sur la page d'accueil
- refonte de la nav-bar

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 1.DynamoCraft.API/uploads
 1.DynamoCraft.API/temp
 1.DynamoCraft.API/env
+2.DynamoCraft.UI/DynamoCraft/src/environments/environment.dev.ts
