--- a/2.DynamoCraft.UI/angular.json
+++ b/2.DynamoCraft.UI/angular.json
@@ -63,7 +63,12 @@
                                     "maximumError": "4kB"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "optimization": true,
+                            "extractLicenses": true,
+                            "namedChunks": false,
+                            "aot": true
                         },
                         "development": {
                             "optimization": false,
