--- a/2.DynamoCraft.UI/package.json
+++ b/2.DynamoCraft.UI/package.json
@@ -22,10 +22,14 @@
         "@angular/router": "^18.0.0",
         "@angular/ssr": "^18.0.3",
         "@popperjs/core": "^2.11.8",
+        "@types/three": "^0.165.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "express": "^4.18.2",
         "rxjs": "~7.8.0",
+        "three": "^0.165.0",
+        "three-gltf-loader": "^1.111.0",
+        "three-orbitcontrols": "^2.110.3",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.3"
     },
