--- a/1.DynamoCraft.API/package.json
+++ b/1.DynamoCraft.API/package.json
@@ -19,6 +19,7 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.9.7",
+        "nodemailer": "^6.9.14",
         "nodemon": "^3.1.1",
         "sequelize": "^6.37.3",
         "sequelize-auto-migration": "^0.0.7"
