--- a/2.DynamoCraft.UI/package.json
+++ b/2.DynamoCraft.UI/package.json
@@ -31,6 +31,7 @@
         "three-gltf-loader": "^1.111.0",
         "three-orbitcontrols": "^2.110.3",
         "tslib": "^2.3.0",
+        "webpack": "^5.94.0",
         "zone.js": "~0.14.3"
     },
     "devDependencies": {
