--- a/1.DynamoCraft.API/package.json
+++ b/1.DynamoCraft.API/package.json
@@ -10,17 +10,23 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@faker-js/faker": "^8.4.1",
         "archiver": "^7.0.1",
+        "axios": "^1.7.6",
         "bcrypt": "^5.1.1",
+        "cheerio": "^1.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "fs": "^0.0.1-security",
+        "image-downloader": "^4.3.0",
         "jimp": "^0.22.12",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.9.7",
         "nodemailer": "^6.9.14",
         "nodemon": "^3.1.1",
+        "path": "^0.12.7",
         "sequelize": "^6.37.3",
         "sequelize-auto-migration": "^0.0.7"
     },
