--- a/2.DynamoCraft.UI/package.json
+++ b/2.DynamoCraft.UI/package.json
@@ -11,21 +11,25 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^18.0.0",
-        "@angular/common": "^18.0.0",
-        "@angular/compiler": "^18.0.0",
-        "@angular/core": "^18.0.0",
-        "@angular/forms": "^18.0.0",
-        "@angular/platform-browser": "^18.0.0",
-        "@angular/platform-browser-dynamic": "^18.0.0",
-        "@angular/platform-server": "^18.0.0",
-        "@angular/router": "^18.0.0",
-        "@angular/ssr": "^18.0.3",
+        "@angular/animations": "^17.2.0",
+        "@angular/common": "^17.2.0",
+        "@angular/compiler": "^17.2.0",
+        "@angular/core": "^17.2.0",
+        "@angular/forms": "^17.2.0",
+        "@angular/platform-browser": "^17.2.0",
+        "@angular/platform-browser-dynamic": "^17.2.0",
+        "@angular/platform-server": "^17.2.0",
+        "@angular/router": "^17.2.0",
+        "@angular/ssr": "^17.2.0",
         "@popperjs/core": "^2.11.8",
         "@types/three": "^0.165.0",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "chart.js": "^4.4.4",
         "express": "^4.18.2",
+        "ng-recaptcha": "^13.2.1",
+        "ng2-charts": "^5.0.4",
+        "ngx-captcha": "^13.0.0",
         "rxjs": "~7.8.0",
         "three": "^0.165.0",
         "three-gltf-loader": "^1.111.0",
@@ -35,9 +39,9 @@
         "zone.js": "~0.14.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.0.3",
-        "@angular/cli": "^18.0.3",
-        "@angular/compiler-cli": "^18.0.0",
+        "@angular-devkit/build-angular": "^17.2.0",
+        "@angular/cli": "^17.2.0",
+        "@angular/compiler-cli": "^17.2.0",
         "@types/bootstrap": "^5.2.10",
         "@types/express": "^4.17.17",
         "@types/jasmine": "~5.1.0",
