--- a/1.DynamoCraft.API/package.json
+++ b/1.DynamoCraft.API/package.json
@@ -18,7 +18,8 @@
         "cheerio": "^1.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
+        "express": "^4.21.0",
+        "file-type": "^16.5.4",
         "fs": "^0.0.1-security",
         "image-downloader": "^4.3.0",
         "jimp": "^0.22.12",
